[gd_scene load_steps=9 format=2]

[ext_resource path="res://recursos/player.png" type="Texture" id=1]
[ext_resource path="res://recursos/fundo.png" type="Texture" id=2]
[ext_resource path="res://scripts/player.gd" type="Script" id=3]
[ext_resource path="res://scripts/fase.gd" type="Script" id=4]
[ext_resource path="res://recursos/sucesso_ou_pressButtom.wav" type="AudioStream" id=5]
[ext_resource path="res://recursos/laser.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 32.3217

[sub_resource type="Animation" id=2]
resource_name = "move"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("space2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -21.9756, -850.326 ), Vector2( -21.9756, -6.15173 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("space:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -21.8633, -16.8179 ), Vector2( -21.8633, 827.356 ) ]
}

[node name="fase" type="Node2D"]
script = ExtResource( 4 )

[node name="space" type="Sprite" parent="."]
position = Vector2( -21.8633, -16.8179 )
scale = Vector2( 1.03863, 1.29901 )
texture = ExtResource( 2 )
centered = false

[node name="space2" type="Sprite" parent="."]
position = Vector2( -21.9756, -850.326 )
scale = Vector2( 1.03863, 1.02053 )
texture = ExtResource( 2 )
centered = false

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 257.314, 866.989 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="sprite" type="Sprite" parent="player"]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="shape" type="CollisionShape2D" parent="player"]
shape = SubResource( 1 )

[node name="pos" type="Position2D" parent="player"]
position = Vector2( 0, -37 )

[node name="pos_l" type="Position2D" parent="player"]
position = Vector2( -21, 8.5 )

[node name="pos_r" type="Position2D" parent="player"]
position = Vector2( 22, 8.5 )

[node name="sound_laser" type="AudioStreamPlayer" parent="player"]
stream = ExtResource( 6 )

[node name="sound_pw" type="AudioStreamPlayer" parent="player"]
stream = ExtResource( 5 )

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "move"
playback_speed = 0.5
anims/move = SubResource( 2 )

[node name="tempo" type="Label" parent="."]
margin_right = 510.0
margin_bottom = 102.0
text = "50"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="passar_fase" type="Label" parent="."]
visible = false
margin_top = 352.0
margin_right = 510.0
margin_bottom = 454.0
text = "STAGE CLEAR"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
